--- a/front/views/edit.html
+++ b/front/views/edit.html
@@ -1,3 +1,4 @@
+<a class="btn-floating btn-large waves-effect waves-light red" onclick='navigate("index")'><i class="material-icons">arrow_back</i></a>
 <div class="container">
     <h3 id="editTitle">Ajouter d'une liste</h3>
     <div id="formEditCar">
