--- a/front/views/index.html
+++ b/front/views/index.html
@@ -1,4 +1,5 @@
 <a class="btn-floating btn-large waves-effect waves-light red" onclick='navigate("edit")'><i class="material-icons">add</i></a>
+<a class="btn-floating btn-large waves-effect waves-light red" onclick='navigate("compte")'><i class="material-icons">face</i></a>
 <div class="row">
     <h5>Vos liste actives </h5>
     <table id="tableListe" class="stripped responsive-table" style="display: none">
