--- a/front/views/index.html
+++ b/front/views/index.html
@@ -1,60 +1,69 @@
-<a class="btn-floating btn-large waves-effect waves-light red" onclick='navigate("edit")'><i class="material-icons">add</i></a>
-<a class="btn-floating btn-large waves-effect waves-light red" onclick='navigate("compte")'><i class="material-icons">face</i></a>
-<div class="row">
-    <h5>Vos liste actives </h5>
-    <table id="tableListe" class="stripped responsive-table" style="display: none">
-        <thead>
+<nav>
+    <div class="nav-wrapper">
+        <a href="#" class="brand-logo">Logo</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+
+        </ul>
+    </div>
+</nav>
+<div id="tempo">
+
+    <div class="row">
+        <h5>Vos liste actives </h5>
+        <table id="tableListe" class="stripped responsive-table" style="display: none">
+            <thead>
+                <tr>
+                    <th>nom</th>
+                    <th>date</th>
+                </tr>
+            </thead>
+            <tbody id="tableBody">
+
+            </tbody>
+        </table>
+        <h5>Vos liste archive </h5>
+        <table id="archive" class="stripped responsive-table" style="display: none">
+            <thead>
             <tr>
                 <th>nom</th>
                 <th>date</th>
             </tr>
-        </thead>
-        <tbody id="tableBody">
+            </thead>
+            <tbody id="tableBodyOff">
 
-        </tbody>
-    </table>
-    <h5>Vos liste archive </h5>
-    <table id="archive" class="stripped responsive-table" style="display: none">
-        <thead>
-        <tr>
-            <th>nom</th>
-            <th>date</th>
-        </tr>
-        </thead>
-        <tbody id="tableBodyOff">
+            </tbody>
+        </table>
 
-        </tbody>
-    </table>
+        <h5>Vos liste partagé </h5>
+        <table id="partage" class="stripped responsive-table" style="display: none">
+            <thead>
+            <tr>
+                <th>nom</th>
+                <th>date</th>
+            </tr>
+            </thead>
+            <tbody id="tableBodyPartage">
 
-    <h5>Vos liste partagé </h5>
-    <table id="partage" class="stripped responsive-table" style="display: none">
-        <thead>
-        <tr>
-            <th>nom</th>
-            <th>date</th>
-        </tr>
-        </thead>
-        <tbody id="tableBodyPartage">
-
-        </tbody>
-    </table>
+            </tbody>
+        </table>
 
 
-    <div class="container mt-5 Novisiblee" id="afficheproduit">
-        <div id="divlisteProduit" class="liste d-none">
-            <h3 id="titleListe" class="mt-5">Vos produits dans la liste :  </h3>
-            <button onclick='navigate("editProduit")' class="waves-effect waves-light btn" id="addProduct">ajout</button>
-            <div class="collection" id="listeProduit">
+        <div class="container mt-5 Novisiblee" id="afficheproduit">
+            <div id="divlisteProduit" class="liste d-none">
+                <h3 id="titleListe" class="mt-5">Vos produits dans la liste :  </h3>
+                <button onclick='navigate("editProduit")' class="waves-effect waves-light btn" id="addProduct">ajout</button>
+                <div class="collection" id="listeProduit">
 
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-<button onclick="indexController.getlock()" type="button" class="btn btn-primary"  style="
-    position: fixed;
-    bottom: 10px;
-    right: 60px;
-    border-radius: 35px;">
-    <i class="material-icons" id="lock"></i>
-</button>
+    <button onclick="indexController.getlock()" type="button" class="btn btn-primary"  style="
+        position: fixed;
+        bottom: 10px;
+        right: 60px;
+        border-radius: 35px;">
+        <i class="material-icons" id="lock"></i>
+    </button>
+</div>
