--- a/front/views/compte.html
+++ b/front/views/compte.html
@@ -1,11 +1,15 @@
 <nav>
     <div class="nav-wrapper">
-        <a href="#" class="brand-logo">Logo</a>
+        <a onclick='navigate("index")'class="brand-logo">Note'Tout</a>
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
 
         </ul>
     </div>
 </nav>
+<ul class="sidenav" id="mobile-demo">
+
+</ul>
 <div id="tempo">
     <div class="container">
 
