--- a/front/views/edit.html
+++ b/front/views/edit.html
@@ -1,11 +1,15 @@
 <nav>
     <div class="nav-wrapper">
-        <a href="#" class="brand-logo">Logo</a>
+        <a onclick='navigate("index")'class="brand-logo">Note'Tout</a>
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
 
         </ul>
     </div>
 </nav>
+<ul class="sidenav" id="mobile-demo">
+
+</ul>
 <div id="tempo">
     <div class="container">
 
@@ -26,8 +30,14 @@
                 </form>
             </div>
             <div class="row">
-                <button class="waves-effect waves-light btn" onclick="editController.save()"><i class="material-icons right">check</i>Enregistrer</button>
+                <button class="btn btn-primary borderRadus" onclick="editController.save()"><i class="fas fa-check"></i>&nbsp;enregistrer</button>
             </div>
         </div>
     </div>
 </div>
+<style>
+    button.btn.btn-primary.borderRadus{
+        width: max-content !important;
+        margin-left: auto;
+    }
+</style>
