--- a/front/views/editProduit.html
+++ b/front/views/editProduit.html
@@ -30,8 +30,14 @@
                 </form>
             </div>
             <div class="row">
-                <button class="btn btn-primary borderRadus" onclick="editProduitController.save()"><i class="material-icons right">check</i>Enregistrer</button>
+                <button class="btn btn-primary borderRadus" onclick="editProduitController.save()"><i class="fas fa-check"></i>&nbsp;enregistrer</button>
             </div>
         </div>
     </div>
 </div>
+<style>
+    button.btn.btn-primary.borderRadus{
+        width: max-content !important;
+        margin-left: auto;
+    }
+</style>
