--- a/front/res/css/responsive.css
+++ b/front/res/css/responsive.css
@@ -1,11 +1,45 @@
-
-
 /* RESPONSIVE login / changement mot de passe / register */
-@media (max-width: 933px) {
+@media (max-width: 992px) {
+    /*global*/
+    .container{
+        width: 100%;
+    }
+
+    /*formulaire modification / ajout*/
+    .row{
+        flex-direction: column;
+    }
+    .row .col.s6{
+        margin-left: unset;
+        width: 100%;
+    }
+    button.btn.btn-primary.borderRadus{
+        margin-left: unset !important;
+    }
+
+    /*tableau affichage*/
+    .responsivDisplayName{
+        display: none;
+    }
+
+    /*login / register*/
     #containerForm {
         display: none;
     }
     .form_login_register{
         display: block;
     }
+}
+
+
+
+@media (max-width: 388px) {
+    button.btn.btn-primary.borderRadus{
+        height: 32px;
+        padding: 0px 9px;
+    }
+    .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl{
+        padding-right: unset;
+        padding-left: unset;
+}
 }
