--- a/front/views/admin.html
+++ b/front/views/admin.html
@@ -10,3 +10,88 @@
 <ul class="sidenav" id="mobile-demo">
 
 </ul>
+
+<div id="tempo">
+    <div class="container">
+        <div class="accordion" id="accordionPanelsStayOpenExample">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                        <h4>Tout les utilisateurs</h4>
+                    </button>
+                </h2>
+                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+                    <div class="accordion-body">
+                        <div class="input-field col s6">
+                            <input id="fieldSearch" type="text" class="validate" onkeyup="adminController.filterUser()">
+                            <label for="fieldSearch" class="active">valeur</label>
+                        </div>
+                        <table id="tableListe" class="table table-hover">
+                            <thead>
+                            <tr>
+                                <th>id</th>
+                                <th>email</th>
+                            </tr>
+                            </thead>
+                            <tbody id="tableBodyUser">
+
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item" id="userInfo">
+                <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                    <button class="accordion-button collapsed" id=clickButtonInfoUser type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                        <h4>Vos listes Archivée </h4>
+                    </button>
+                </h2>
+                <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+                    <div class="accordion-body" id="userInfoForm">
+                        <span class="closeUserProfil"></span>
+                        <h4 >Modification des  information de l'utilisation </h4>
+                        <div class="row">
+                            <form class="col s12">
+                                <div class="row">
+                                    <div class="input-field col s6">
+                                        <input id="fieldName" type="text" class="validate" disabled>
+                                        <label for="fieldName" class="active">Nom</label>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="input-field col s6">
+                                        <input id="fieldEmail" type="email" class="validate">
+                                        <label for="fieldEmail" class="active">Email</label>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="input-field col s6">
+                                        <input id="fieldPassword" type="password" class="validate">
+                                        <label for="fieldPassword" class="active">Password</label>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <label>
+                                        <input type="checkbox"  id="fieldCheck" class="" >
+                                        <span class="x2paddingLeft">Actif</span>
+                                    </label>
+                                </div>
+                                <div class="row">
+                                    <h5>Les roles :</h5>
+                                    <span  id="rolesUser">
+
+                                    </span>
+                                </div>
+                                <input type="hidden" value="" id="idUserSuperCache">
+                            </form>
+                        </div>
+                        <div class="row">
+                            <button class="btn btn-primary borderRadus" onclick="adminController.saveAll()"><i class="fas fa-check"></i>&nbsp;enregistrer</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
