--- a/front/views/admin.html
+++ b/front/views/admin.html
@@ -43,13 +43,12 @@
             <div class="accordion-item" id="userInfo">
                 <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
                     <button class="accordion-button collapsed" id=clickButtonInfoUser type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                        <h4>Vos listes Archivée </h4>
+                        <h4 >Modification des  information de l'utilisation </h4>
                     </button>
                 </h2>
                 <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
                     <div class="accordion-body" id="userInfoForm">
                         <span class="closeUserProfil"></span>
-                        <h4 >Modification des  information de l'utilisation </h4>
                         <div class="row">
                             <form class="col s12">
                                 <div class="row">
@@ -72,7 +71,7 @@
                                 </div>
                                 <div class="row">
                                     <label>
-                                        <input type="checkbox"  id="fieldCheck" class="" >
+                                        <input type="checkbox"  id="fieldCheck" class="" onclick="adminController.ActiveUser()" >
                                         <span class="x2paddingLeft">Actif</span>
                                     </label>
                                 </div>
