--- a/front/views/admin.html
+++ b/front/views/admin.html
@@ -103,7 +103,35 @@
                     </div>
                 </div>
             </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-premium" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                        <h4>Tout les utilisateurs premium</h4>
+                    </button>
+                </h2>
+                <div id="panelsStayOpen-premium" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
+                    <div class="accordion-body">
+                        <table class="table table-hover">
+                            <thead>
+                            <tr>
+                                <th>id</th>
+                                <th>email</th>
+                                <th>type abonnement</th>
+                            </tr>
+                            </thead>
+                            <tbody id="allAbonnement">
+
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
 
+<style>
+    .fa, .fab, .fad, .fal, .far, .fas{
+        font-size: 23px;
+    }
+</style>
