rajout d'une icon

--- a/front/views/admin.html
+++ b/front/views/admin.html
@@ -54,7 +54,7 @@
                                 <div class="row">
                                     <div class="input-field col s6">
                                         <input id="fieldName" type="text" class="validate" disabled>
-                                        <label for="fieldName" class="active">Nom</label>
+                                        <label for="fieldName"  class="active">Nom</label>
                                     </div>
                                 </div>
                                 <div class="row">
@@ -66,7 +66,7 @@
                                 <div class="row">
                                     <div class="input-field col s6">
                                         <input id="fieldPassword" type="password" class="validate">
-                                        <label for="fieldPassword" class="active">Password</label>
+                                        <label for="fieldPassword" >Password</label>
                                     </div>
                                 </div>
                                 <div class="row">
@@ -91,7 +91,7 @@
                         <h5>Notification :</h5>
                         <div class="input-field col s6">
                             <input id="fieldTitre" type="text" class="validate">
-                            <label for="fieldTitre" class="active">Titre</label>
+                            <label for="fieldTitre" >Titre</label>
                         </div>
                         <div class="input-field col s12">
                             <textarea id="textarea1" class="materialize-textarea"></textarea>
