--- a/front/views/compte.html
+++ b/front/views/compte.html
@@ -38,11 +38,11 @@
                     <div class="row">
                         <div class="input-field col s6">
                             <input id="fieldPassword" type="password" class="validate">
-                            <label for="fieldPassword" class="active">password</label>
+                            <label for="fieldPassword" >password</label>
                         </div>
                         <div class="input-field col s6">
                             <input id="fieldPassword1" type="password" class="validate">
-                            <label for="fieldPassword1" class="active">Repeter le password</label>
+                            <label for="fieldPassword1" >Repeter le password</label>
                         </div>
                 </form>
             </div>
