--- a/front/views/edit.html
+++ b/front/views/edit.html
@@ -20,11 +20,11 @@
                     <div class="row">
                         <div class="input-field col s6">
                             <input id="fieldName" type="text" class="validate">
-                            <label for="fieldName" class="active">Nom</label>
+                            <label for="fieldName" >Nom</label>
                         </div>
                         <div class="input-field col s6">
                             <input id="fieldDate" type="date" class="validate">
-                            <label for="fieldDate" class="active">Date</label>
+                            <label for="fieldDate" >Date</label>
                         </div>
                     </div>
                 </form>
