--- a/front/views/editProduit.html
+++ b/front/views/editProduit.html
@@ -20,11 +20,11 @@
                     <div class="row">
                         <div class="input-field col s6">
                             <input id="fieldName" type="text" class="validate">
-                            <label for="fieldName" class="active">Nom</label>
+                            <label for="fieldName" >Nom</label>
                         </div>
                         <div class="input-field col s6">
                             <input id="fieldQtt" type="number" min=0 class="validate">
-                            <label for="fieldQtt" class="active">quantite</label>
+                            <label for="fieldQtt" >quantite</label>
                         </div>
                     </div>
                 </form>
