--- a/front/views/admin.html
+++ b/front/views/admin.html
@@ -23,7 +23,7 @@
                 <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
                     <div class="accordion-body">
                         <div class="input-field col s6">
-                            <input id="fieldSearch" type="text" class="validate" onkeyup="adminController.filterUser()">
+                            <input id="fieldSearch" type="text" class="validate" onkeyup="adminController.filterUser()" placeholder="Trie sur les emails utilisateur">
                             <label for="fieldSearch" class="active">valeur</label>
                         </div>
                         <table id="tableListe" class="table table-hover">
