--- a/front/res/css/index.css
+++ b/front/res/css/index.css
@@ -309,7 +309,9 @@ table{
         transform: rotate(17deg);
     }
 }
-
+span.badge.rounded-pill.bg-secondColor{
+    cursor: pointer;
+}
 
 .borderRadus{
 border-radius: 30px !important;
