--- a/front/res/css/index.css
+++ b/front/res/css/index.css
@@ -317,7 +317,7 @@ tr, .collection .collection-item{
     cursor: pointer;
 }
 .noCursor{
-    cursor: default;
+    cursor: default !important;
 }
 
 
