--- a/front/views/premium.html
+++ b/front/views/premium.html
@@ -14,7 +14,7 @@
     <div class="container">
         <span class='modalPayment'>
             <header class='header'>
-                <h1>Devenir premium pour 5 €</h1>
+                <h1>Devenir premium pour <b>5 €</b></h1>
                 <div class='card-type' id="allPaymentType">
 
                 </div>
