correction change password admin

--- a/front/views/admin.html
+++ b/front/views/admin.html
@@ -87,6 +87,9 @@
                         <div class="row">
                             <button class="btn btn-primary borderRadus" onclick="adminController.saveAll()"><i class="fas fa-check"></i>&nbsp;enregistrer</button>
                         </div>
+                        <div class="row">
+                            <button class="btn btn-primary borderRadus" onclick="adminController.ChangeMDPADMIN()"><i class="fas fa-check"></i>&nbsp;Envoyer le lien pour le mot de passe</button>
+                        </div>
 
                         <h5>Notification :</h5>
                         <div class="input-field col s6">
